--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,7 +87,8 @@ button[disabled] {
   cursor: default;
 }
 
-footer {
+footer,
+.partner-ref {
   display: flex;
   flex: 1;
   padding: 1rem 0;
@@ -95,7 +96,8 @@ footer {
   align-items: center;
 }
 
-footer a {
+footer a,
+.partner-ref a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,7 +105,8 @@ footer a {
   font-size: 0.8em;
 }
 
-footer .logo {
+footer .logo,
+.partner-ref .logo {
   height: 1em;
   margin-left: 0.5rem;
 }
