--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,12 +8,10 @@ body {
 body {
   color: white;
   background-color: #002060;
-  background-image: linear-gradient(
-      90deg,
-      rgba(104, 234, 255, 0.25),
-      rgba(104, 234, 255, 0)
-    ),
-    linear-gradient(270deg, rgba(104, 234, 255, 0.15), rgba(104, 234, 255, 0));
+  background-image: url(../public/images/blue-bg.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 a {
@@ -49,6 +47,12 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.divider {
+  border-bottom: #68eaff 1px solid;
+  height: 5px;
+  width: 75%;
 }
 
 .AppBox {
