--- a/styles/GenerateImage.module.css
+++ b/styles/GenerateImage.module.css
@@ -31,10 +31,10 @@
 }
 
 .deliveredImg {
-  border: 1px solid #68eaff !important;
   border-radius: 15px;
   width: 55%;
   margin-bottom: 15px;
+  box-shadow: 0px 0px 6px #002060;
 }
 
 @keyframes animate {
