--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,18 +77,23 @@ button {
   padding: 1rem 1.5rem;
   font-size: 1.5em;
   font-weight: 600;
-  background: linear-gradient(#002060, #002060) padding-box,
+  /* background: linear-gradient(rgba(0, 32, 96, 0.85), rgba(0, 32, 96, 1)); */
+  background: linear-gradient(rgba(0, 32, 96, 0.85), rgba(0, 32, 96, 1))
+      padding-box,
     linear-gradient(120deg, #68eaff, #fe00fe) border-box;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   border-radius: 10px;
   width: fit-content;
   cursor: pointer;
+  box-shadow: 0px 0px 4px #68eaff;
 }
 
 button:disabled,
 button[disabled] {
   filter: opacity(0.5);
   cursor: default;
+  box-shadow: none;
+  border: 1px solid #002060;
 }
 
 footer,
