--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,14 +78,14 @@ button {
   font-size: 1.5em;
   font-weight: 600;
   /* background: linear-gradient(rgba(0, 32, 96, 0.85), rgba(0, 32, 96, 1)); */
-  background: linear-gradient(rgba(0, 32, 96, 0.85), rgba(0, 32, 96, 1))
+  background: linear-gradient(rgba(0, 32, 96, 0.8), rgba(0, 32, 96, 1))
       padding-box,
     linear-gradient(120deg, #68eaff, #fe00fe) border-box;
-  border: 1px solid transparent;
+  border: 1px solid #002060;
   border-radius: 10px;
   width: fit-content;
   cursor: pointer;
-  box-shadow: 0px 0px 4px #68eaff;
+  box-shadow: 0px 0px 5px #68eaff;
 }
 
 button:disabled,
@@ -123,5 +123,46 @@ footer .logo,
 @media screen and (max-width: 375px) {
   button {
     padding: 0.7rem 1.3rem;
+  }
+}
+
+.gradient-border {
+  --borderWidth: 2px;
+  position: relative;
+  border-radius: 10px;
+  display: inline-block;
+  width: fit-content;
+  height: fit-content;
+}
+.gradient-border:after {
+  content: '';
+  position: absolute;
+  top: calc(-1 * var(--borderWidth));
+  left: calc(-1 * var(--borderWidth));
+  height: calc(100% + var(--borderWidth) * 2);
+  width: calc(100% + var(--borderWidth) * 2);
+  background: linear-gradient(
+    60deg,
+    #68eaff,
+    #fe00fe,
+    #002060,
+    #8994ef,
+    #7f34d2
+  );
+  border-radius: 10px;
+  z-index: -1;
+  animation: animatedgradient 4s ease alternate infinite;
+  background-size: 300% 300%;
+}
+
+@keyframes animatedgradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
