--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,10 +77,7 @@ button {
   padding: 1rem 1.5rem;
   font-size: 1.5em;
   font-weight: 600;
-  /* background: linear-gradient(rgba(0, 32, 96, 0.85), rgba(0, 32, 96, 1)); */
-  background: linear-gradient(rgba(0, 32, 96, 0.8), rgba(0, 32, 96, 1))
-      padding-box,
-    linear-gradient(120deg, #68eaff, #fe00fe) border-box;
+  background: linear-gradient(rgba(0, 32, 96, 0.8), rgba(0, 32, 96, 1));
   border: 1px solid rgba(0, 32, 96, 0.8);
   border-radius: 10px;
   width: fit-content;
@@ -94,6 +91,12 @@ button[disabled] {
   cursor: default;
   box-shadow: none;
   border: 1px solid #002060;
+}
+
+button.gradient-border {
+  background: linear-gradient(rgba(0, 32, 96, 0.8), rgba(0, 32, 96, 1))
+      padding-box,
+    linear-gradient(120deg, #68eaff, #fe00fe) border-box;
 }
 
 footer,
