--- a/styles/MintNFT.module.css
+++ b/styles/MintNFT.module.css
@@ -35,12 +35,32 @@
   font-weight: 700;
 }
 
+.thanks {
+  margin: 0px;
+}
+
+.tweetBox {
+  display: flex;
+  justify-content: space-around;
+}
+
+.tweet {
+  background: linear-gradient(rgba(230, 230, 230, 1), rgba(200, 200, 200, 1));
+  padding: 0px 10px;
+  margin: 0px 20px;
+  line-height: 1.8rem;
+  border-radius: 2px;
+  color: #002060;
+  display: inline-block;
+  font-weight: 700;
+}
+
 @media screen and (max-width: 360px) {
   .success {
     font-size: 1rem;
   }
   .thanks {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
   .metalink {
     display: none;
