--- a/styles/MintNFT.module.css
+++ b/styles/MintNFT.module.css
@@ -39,6 +39,12 @@
   margin: 0px;
 }
 
+.explainer {
+  margin-bottom: 0px;
+  font-size: 0.8rem;
+  filter: opacity(0.7);
+}
+
 .tweetBox {
   display: flex;
 }
@@ -46,7 +52,7 @@
 .tweet {
   background: linear-gradient(rgba(230, 230, 230, 1), rgba(200, 200, 200, 1));
   padding: 0px 10px;
-  margin: 0px 20px;
+  margin: 20px 20px;
   line-height: 1.8rem;
   border-radius: 2px;
   color: #002060;
