--- a/styles/MintNFT.module.css
+++ b/styles/MintNFT.module.css
@@ -6,6 +6,11 @@
   color: #68eaff;
 }
 
+.connecting {
+  color: #68eaff;
+  padding-bottom: 60%;
+}
+
 .metalink {
   color: #68eaff;
   font-weight: 600;
