--- a/styles/MintNFT.module.css
+++ b/styles/MintNFT.module.css
@@ -11,6 +11,12 @@
   padding-bottom: 60%;
 }
 
+.anchor {
+  color: #68eaff;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .metalink {
   color: #68eaff;
   font-weight: 600;
