--- a/styles/SingleTopic.module.css
+++ b/styles/SingleTopic.module.css
@@ -34,3 +34,10 @@
     margin: 0.2rem 0.1rem;
   }
 }
+@media screen and (max-width: 300px) {
+  .singleTopic {
+    font-size: 0.65em;
+    padding: 0.2rem 0.3rem;
+    margin: 0.1rem 0.05rem;
+  }
+}
